26.09.2019: inicio de implementacao de camada de persistencia com mysql e hibernate