@@ -17,91 +17,33 @@ rem limitations under the License.
 rem ---------------------------------------------------------------------------
 rem NT Service Install/Uninstall script
 rem
-rem Usage: service.bat install/remove [service_name [--rename]] [--user username]
-rem
 rem Options
-rem install                 Install the service using default settings.
-rem remove                  Remove the service from the system.
+rem install                Install the service using Tomcat8 as service name.
+rem                        Service is installed using default settings.
+rem remove                 Remove the service from the System.
 rem
-rem service_name (optional) The name to use for the service. If not specified,
-rem                         Tomcat9 is used as the service name.
-rem
-rem --rename     (optional) Rename tomcat9.exe and tomcat9w.exe to match
-rem                         the non-default service name.
-rem
-rem username     (optional) The name of the OS user to use to install/remove
-rem                         the service (not the name of the OS user the
-rem                         service will run as). If not specified, the current
-rem                         user is used.
+rem name        (optional) If the second argument is present it is considered
+rem                        to be new service name
 rem ---------------------------------------------------------------------------
 
 setlocal
 
 set "SELF=%~dp0%service.bat"
-
-set DEFAULT_SERVICE_NAME=Tomcat9
-set SERVICE_NAME=%DEFAULT_SERVICE_NAME%
-
-set "CURRENT_DIR=%cd%"
-
-rem Parse the arguments
-if "x%1x" == "xx" goto displayUsage
-set SERVICE_CMD=%1
-shift
-if "x%1x" == "xx" goto checkEnv
-:checkUser
-if "x%1x" == "x/userx" goto runAsUser
-if "x%1x" == "x--userx" goto runAsUser
-set SERVICE_NAME=%1
-shift
-if "x%1x" == "xx" goto checkEnv
-if "x%1x" == "x--renamex" (
-    set RENAME=%1
-    shift
-)
-if "x%1x" == "xx" goto checkEnv
-goto checkUser
-:runAsUser
-shift
-if "x%1x" == "xx" goto displayUsage
-set SERVICE_USER=%1
-shift
-runas /env /savecred /user:%SERVICE_USER% "%COMSPEC% /K \"%SELF%\" %SERVICE_CMD% %SERVICE_NAME%"
-goto end
-
-rem Check the environment
-:checkEnv
-
 rem Guess CATALINA_HOME if not defined
+set "CURRENT_DIR=%cd%"
 if not "%CATALINA_HOME%" == "" goto gotHome
 set "CATALINA_HOME=%cd%"
-if exist "%CATALINA_HOME%\bin\%DEFAULT_SERVICE_NAME%.exe" goto okHome
-if exist "%CATALINA_HOME%\bin\%SERVICE_NAME%.exe" goto okHome
+if exist "%CATALINA_HOME%\bin\tomcat8.exe" goto okHome
 rem CD to the upper dir
 cd ..
 set "CATALINA_HOME=%cd%"
 :gotHome
-if exist "%CATALINA_HOME%\bin\%DEFAULT_SERVICE_NAME%.exe" (
-    set "EXECUTABLE=%CATALINA_HOME%\bin\%DEFAULT_SERVICE_NAME%.exe"
-    goto okHome
-)
-if exist "%CATALINA_HOME%\bin\%SERVICE_NAME%.exe" (
-    set "EXECUTABLE=%CATALINA_HOME%\bin\%SERVICE_NAME%.exe"
-    goto okHome
-)
-if "%DEFAULT_SERVICE_NAME%"== "%SERVICE_NAME%" (
-    echo The file %DEFAULT_SERVICE_NAME%.exe was not found...
-) else (
-    echo Neither the %DEFAULT_SERVICE_NAME%.exe file nor the %SERVICE_NAME%.exe file was found...
-)
-echo Either the CATALINA_HOME environment variable is not defined correctly or
-echo the incorrect service name has been used.
-echo Both the CATALINA_HOME environment variable and the correct service name
-echo are required to run this program.
+if exist "%CATALINA_HOME%\bin\tomcat8.exe" goto okHome
+echo The tomcat8.exe was not found...
+echo The CATALINA_HOME environment variable is not defined correctly.
+echo This environment variable is needed to run this program
 goto end
 :okHome
-cd "%CURRENT_DIR%"
-
 rem Make sure prerequisite environment variables are set
 if not "%JAVA_HOME%" == "" goto gotJdkHome
 if not "%JRE_HOME%" == "" goto gotJreHome
@@ -110,16 +52,12 @@ echo Service will try to guess them from the registry.
 goto okJavaHome
 :gotJreHome
 if not exist "%JRE_HOME%\bin\java.exe" goto noJavaHome
+if not exist "%JRE_HOME%\bin\javaw.exe" goto noJavaHome
 goto okJavaHome
 :gotJdkHome
+if not exist "%JAVA_HOME%\jre\bin\java.exe" goto noJavaHome
+if not exist "%JAVA_HOME%\jre\bin\javaw.exe" goto noJavaHome
 if not exist "%JAVA_HOME%\bin\javac.exe" goto noJavaHome
-rem Java 9 has a different directory structure
-if exist "%JAVA_HOME%\jre\bin\java.exe" goto preJava9Layout
-if not exist "%JAVA_HOME%\bin\java.exe" goto noJavaHome
-if not "%JRE_HOME%" == "" goto okJavaHome
-set "JRE_HOME=%JAVA_HOME%"
-goto okJavaHome
-:preJava9Layout
 if not "%JRE_HOME%" == "" goto okJavaHome
 set "JRE_HOME=%JAVA_HOME%\jre"
 goto okJavaHome
@@ -133,27 +71,39 @@ if not "%CATALINA_BASE%" == "" goto gotBase
 set "CATALINA_BASE=%CATALINA_HOME%"
 :gotBase
 
-rem Java 9 no longer supports the java.endorsed.dirs
-rem system property. Only try to use it if
-rem JAVA_ENDORSED_DIRS was explicitly set
-rem or CATALINA_HOME/endorsed exists.
-set ENDORSED_PROP=ignore.endorsed.dirs
-if "%JAVA_ENDORSED_DIRS%" == "" goto noEndorsedVar
-set ENDORSED_PROP=java.endorsed.dirs
-goto doneEndorsed
-:noEndorsedVar
-if not exist "%CATALINA_HOME%\endorsed" goto doneEndorsed
-set ENDORSED_PROP=java.endorsed.dirs
-:doneEndorsed
+set "EXECUTABLE=%CATALINA_HOME%\bin\tomcat8.exe"
 
-rem Process the requested command
+rem Set default Service name
+set SERVICE_NAME=Tomcat8
+set DISPLAYNAME=Apache Tomcat 8.0 %SERVICE_NAME%
+
+if "x%1x" == "xx" goto displayUsage
+set SERVICE_CMD=%1
+shift
+if "x%1x" == "xx" goto checkServiceCmd
+:checkUser
+if "x%1x" == "x/userx" goto runAsUser
+if "x%1x" == "x--userx" goto runAsUser
+set SERVICE_NAME=%1
+set DISPLAYNAME=Apache Tomcat 8.0 %1
+shift
+if "x%1x" == "xx" goto checkServiceCmd
+goto checkUser
+:runAsUser
+shift
+if "x%1x" == "xx" goto displayUsage
+set SERVICE_USER=%1
+shift
+runas /env /savecred /user:%SERVICE_USER% "%COMSPEC% /K \"%SELF%\" %SERVICE_CMD% %SERVICE_NAME%"
+goto end
+:checkServiceCmd
 if /i %SERVICE_CMD% == install goto doInstall
 if /i %SERVICE_CMD% == remove goto doRemove
 if /i %SERVICE_CMD% == uninstall goto doRemove
 echo Unknown parameter "%SERVICE_CMD%"
 :displayUsage
 echo.
-echo Usage: service.bat install/remove [service_name [--rename]] [--user username]
+echo Usage: service.bat install/remove [service_name] [/user username]
 goto end
 
 :doRemove
@@ -168,10 +118,6 @@ echo Failed removing '%SERVICE_NAME%' service
 goto end
 :removed
 echo The service '%SERVICE_NAME%' has been removed
-if exist "%CATALINA_HOME%\bin\%SERVICE_NAME%.exe" (
-    rename "%SERVICE_NAME%.exe" "%DEFAULT_SERVICE_NAME%.exe"
-    rename "%SERVICE_NAME%w.exe" "%DEFAULT_SERVICE_NAME%w.exe"
-)
 goto end
 
 :doInstall
@@ -196,21 +142,9 @@ echo Using JVM:              "%JVM%"
 set "CLASSPATH=%CATALINA_HOME%\bin\bootstrap.jar;%CATALINA_BASE%\bin\tomcat-juli.jar"
 if not "%CATALINA_HOME%" == "%CATALINA_BASE%" set "CLASSPATH=%CLASSPATH%;%CATALINA_HOME%\bin\tomcat-juli.jar"
 
-if "%SERVICE_STARTUP_MODE%" == "" set SERVICE_STARTUP_MODE=manual
-if "%JvmMs%" == "" set JvmMs=128
-if "%JvmMx%" == "" set JvmMx=256
-
-if exist "%CATALINA_HOME%\bin\%DEFAULT_SERVICE_NAME%.exe" (
-    if "x%RENAME%x" == "x--renamex" (
-        rename "%DEFAULT_SERVICE_NAME%.exe" "%SERVICE_NAME%.exe"
-        rename "%DEFAULT_SERVICE_NAME%w.exe" "%SERVICE_NAME%w.exe"
-        set "EXECUTABLE=%CATALINA_HOME%\bin\%SERVICE_NAME%.exe"
-    )
-)
-
 "%EXECUTABLE%" //IS//%SERVICE_NAME% ^
-    --Description "Apache Tomcat 9.0.26 Server - https://tomcat.apache.org/" ^
-    --DisplayName "Apache Tomcat 9.0 %SERVICE_NAME%" ^
+    --Description "Apache Tomcat 8.0.36 Server - http://tomcat.apache.org/" ^
+    --DisplayName "%DISPLAYNAME%" ^
     --Install "%EXECUTABLE%" ^
     --LogPath "%CATALINA_BASE%\logs" ^
     --StdOutput auto ^
@@ -225,11 +159,9 @@ if exist "%CATALINA_HOME%\bin\%DEFAULT_SERVICE_NAME%.exe" (
     --StopClass org.apache.catalina.startup.Bootstrap ^
     --StartParams start ^
     --StopParams stop ^
-    --JvmOptions "-Dcatalina.home=%CATALINA_HOME%;-Dcatalina.base=%CATALINA_BASE%;-D%ENDORSED_PROP%=%CATALINA_HOME%\endorsed;-Djava.io.tmpdir=%CATALINA_BASE%\temp;-Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager;-Djava.util.logging.config.file=%CATALINA_BASE%\conf\logging.properties;%JvmArgs%" ^
-    --JvmOptions9 "--add-opens=java.base/java.lang=ALL-UNNAMED#--add-opens=java.base/java.io=ALL-UNNAMED#--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED" ^
-    --Startup "%SERVICE_STARTUP_MODE%" ^
-    --JvmMs "%JvmMs%" ^
-    --JvmMx "%JvmMx%"
+    --JvmOptions "-Dcatalina.home=%CATALINA_HOME%;-Dcatalina.base=%CATALINA_BASE%;-Djava.endorsed.dirs=%CATALINA_HOME%\endorsed;-Djava.io.tmpdir=%CATALINA_BASE%\temp;-Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager;-Djava.util.logging.config.file=%CATALINA_BASE%\conf\logging.properties" ^
+    --JvmMs 128 ^
+    --JvmMx 256
 if not errorlevel 1 goto installed
 echo Failed installing '%SERVICE_NAME%' service
 goto end
@@ -237,3 +169,4 @@ goto end
 echo The service '%SERVICE_NAME%' has been installed.
 
 :end
+cd "%CURRENT_DIR%"
